--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for fly-io-ui17pa on 2025-07-16T16:16:33Z
+# fly.toml app configuration file generated for fly-io-arspzg on 2025-07-17T00:25:22Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'fly-io-ui17pa'
-primary_region = 'arn'
+app = 'fly-io-arspzg'
+primary_region = 'fra'
 
 [build]
 
@@ -21,30 +21,3 @@ primary_region = 'arn'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
-
-# added to enable my Fly.io app to connect to your Tailscale network (sidecar process for tailscaled)
-
-#[env]
-  # Optional: expose the PI_ENDPOINT and API key if not using secrets
-  # PI_ENDPOINT = "http://raspberrypi.tail37fbde.ts.net:5000/ruuvi"
-  # RELAY_API_KEY = "your-api-key"
-
-#[processes]
-#  app = "bash /start.sh"
-#  tailscale = "/usr/sbin/tailscaled --tun=userspace-networking --socks5-server=localhost:1055"
-
-#[[services]]
-#  internal_port = 8080
-#  protocol = "tcp"
-#  processes = ["app"]
-#  auto_start_machines = true
-#  auto_stop_machines = true
-#  min_machines_running = 0
-
-#  [[services.ports]]
-#    handlers = ["http"]
-#    port = 80
-
-#  [[services.ports]]
-#   handlers = ["tls", "http"]
-#    port = 443
