--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for fly-io-arspzg on 2025-07-17T00:25:22Z
+# fly.toml app configuration file generated for fly-io-arspzg on 2025-07-23T22:48:32Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'fly-io-arspzg'
-primary_region = 'fra'
+primary_region = 'arn'
 
 [build]
 
