--- a/fly.toml
+++ b/fly.toml
@@ -8,10 +8,13 @@ primary_region = 'fra'
 
 [build]
 
+# changed this to avoid repeated instances of fly-relay in Tailscale:
 [http_service]
-  internal_port = 8080
+  #internal_port = 8080
+  internal_port = 5000
   force_https = true
-  auto_stop_machines = 'stop'
+  #auto_stop_machines = 'stop'
+  auto_stop_machines = 'off'     # temporarily prevent idle stop/restarts
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
